feat: Api working version

--- a/BikeAuctionIntegration.Api/appsettings.json
+++ b/BikeAuctionIntegration.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+  "EnableSwagger": true,
   "BikeData": {
-    "FilePath": "Data/GET_Bikes.json"
+    "FilePath": "Data/GET_Bikes.txt"
   }
 }
